--- a/Tutorial6_DOM/style.css
+++ b/Tutorial6_DOM/style.css
@@ -7,3 +7,10 @@ button {
     background-color: rgb(5, 88, 5);
     border-radius: 10%;
 }
+
+.box {
+    height: 100px;
+    width: 100px;
+    right: 0px;
+    border: 2px solid black;
+}
