--- a/Tutorial9_Tic_Tac_Toe/style.css
+++ b/Tutorial9_Tic_Tac_Toe/style.css
@@ -9,13 +9,14 @@
     height: 10vw;
     width: 10vw;
     display: grid;
-    gap: 1px;
     grid-template-columns: 1fr 1fr 1fr;
-    text-align: center;
+    gap: 10px;
 }
 
 .box {
     height: 100%;
     width: 100%;
     border: 2px solid black;
+    border-radius: 0.5rem;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 10);
 }
