--- a/Tutorial9_Tic_Tac_Toe/style.css
+++ b/Tutorial9_Tic_Tac_Toe/style.css
@@ -20,3 +20,7 @@
     border-radius: 0.5rem;
     box-shadow: 0 0 1rem rgba(0, 0, 0, 10);
 }
+
+.box:hover {
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+}
