--- a/Tutorial9_Tic_Tac_Toe/style.css
+++ b/Tutorial9_Tic_Tac_Toe/style.css
@@ -27,3 +27,16 @@
     border: 4px solid rgb(118, 102, 7);
 
 }
+
+.reset-btn {
+    margin-top: 10px;
+    border-radius: 0.5rem;
+    background-color: rgb(5, 88, 5);
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 10);
+    color: white;
+    font-size: 1rem;
+}
+
+.reset-btn:hover {
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+}
