--- a/Tutorial9_Tic_Tac_Toe/style.css
+++ b/Tutorial9_Tic_Tac_Toe/style.css
@@ -44,9 +44,11 @@
 .x-background {
     background-color: #f95959;
     color: #e3e3e3;
+    box-shadow: 0 0 1rem #f95959;
 }
 
 .o-background {
     background-color: #00bbf0;
     color: #e3e3e3;
+    box-shadow: 0 0 1rem #00bbf0;
 }
