--- a/Tutorial9_Tic_Tac_Toe/style.css
+++ b/Tutorial9_Tic_Tac_Toe/style.css
@@ -52,3 +52,15 @@
     color: #e3e3e3;
     box-shadow: 0 0 1rem #00bbf0;
 }
+
+#won-message {
+    height: 100px;
+    width: 100%;
+    background-color: #e63946;
+    color: white;
+    font-weight: 700;
+    font-size: 2rem;
+    text-align: center;
+    margin-top: 100px;
+    display: none;
+}
