--- a/Tutorial9_Tic_Tac_Toe/style.css
+++ b/Tutorial9_Tic_Tac_Toe/style.css
@@ -53,7 +53,7 @@
     box-shadow: 0 0 1rem #00bbf0;
 }
 
-#won-message {
+#message {
     height: 100px;
     width: 100%;
     background-color: #fb8500;
