--- a/Tutorial10_stone_paper_scissors/src/style.css
+++ b/Tutorial10_stone_paper_scissors/src/style.css
@@ -37,3 +37,10 @@
 .images:nth-child(3) {
     background-color: #ffc300;
 }
+
+.score-board {
+    margin-top: 10%;
+    height: 30%;
+    width: 50%;
+    background-color: black;
+}
