--- a/Tutorial10_stone_paper_scissors/src/style.css
+++ b/Tutorial10_stone_paper_scissors/src/style.css
@@ -2,9 +2,15 @@
     height: 100vh;
     width: 100vw;
     background-color: #ffc8dd;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
 }
 
 .images-con {
+    height: 40%;
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
