--- a/Tutorial10_stone_paper_scissors/src/style.css
+++ b/Tutorial10_stone_paper_scissors/src/style.css
@@ -48,11 +48,13 @@
     margin-top: 10%;
     height: 30%;
     width: 50%;
-    border: 2px solid black;
+    border: 2px solid white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: white;
+    background-color: black;
 }
 
 .score {
@@ -62,7 +64,8 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    border: 2px solid black;
+    border: 2px solid white;
+    background-color: rgb(85, 71, 71);
 }
 
 .user-score {}
