--- a/Tutorial10_stone_paper_scissors/src/style.css
+++ b/Tutorial10_stone_paper_scissors/src/style.css
@@ -55,6 +55,9 @@
     align-items: center;
     color: white;
     background-color: black;
+    font-weight: 700;
+    line-height: 1.5rem;
+    font-size: 1.3rem;
 }
 
 .score {
