--- a/Tutorial10_stone_paper_scissors/src/style.css
+++ b/Tutorial10_stone_paper_scissors/src/style.css
@@ -53,7 +53,7 @@
     justify-content: center;
     align-items: center;
     color: white;
-    background-color: black;
+    background: linear-gradient(to right, red, blue);
     font-weight: 700;
     line-height: 1.5rem;
     font-size: 1.3rem;
@@ -66,7 +66,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background-color: rgb(85, 71, 71);
+    background: linear-gradient(to right, blue, red);
 }
 
 .user-score {}
