--- a/Tutorial10_stone_paper_scissors/src/style.css
+++ b/Tutorial10_stone_paper_scissors/src/style.css
@@ -1,7 +1,12 @@
 .container {
     height: 100vh;
     width: 100vw;
-    background-color: #ffc8dd;
+    background: #12c2e9;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -53,7 +58,12 @@
     justify-content: center;
     align-items: center;
     color: white;
-    background: linear-gradient(to right, red, blue);
+    background: #373B44;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #4286f4, #373B44);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #4286f4, #373B44);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     font-weight: 700;
     line-height: 1.5rem;
     font-size: 1.3rem;
@@ -66,7 +76,12 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background: linear-gradient(to right, blue, red);
+    background: #FF0099;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #493240, #FF0099);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #493240, #FF0099);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .user-score {}
