--- a/Tutorial10_stone_paper_scissors/src/style.css
+++ b/Tutorial10_stone_paper_scissors/src/style.css
@@ -76,11 +76,11 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background: #FF0099;
+    background: #005AA7;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #493240, #FF0099);
+    background: -webkit-linear-gradient(to right, #FFFDE4, #005AA7);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #493240, #FF0099);
+    background: linear-gradient(to right, #FFFDE4, #005AA7);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
