--- a/Tutorial10_stone_paper_scissors/src/style.css
+++ b/Tutorial10_stone_paper_scissors/src/style.css
@@ -1,5 +1,5 @@
 .container {
-    height: 100vh;
+    height: auto;
     width: 100vw;
     background: #12c2e9;
     /* fallback for old browsers */
@@ -12,6 +12,20 @@
     justify-content: space-evenly;
     flex-direction: column;
 }
+
+.comp-choice-con {
+    height: 30%;
+    width: 20%;
+    border: 1px solid black;
+    margin-top: 10px;
+}
+
+.user-choice-con {
+    height: 30%;
+    width: 20%;
+    border: 1px solid black;
+}
+
 
 .images-con {
     height: 40%;
@@ -95,4 +109,25 @@
 .score:hover {
     transform: scale(1.1);
 
+}
+
+.user-choice img {
+    object-fit: cover;
+}
+
+.rock-choice {
+    height: 50%;
+    width: 50%;
+    background-image: url('../images/stone-removebg-preview.png');
+    background-size: cover;
+}
+
+.paper-choice {
+    background-image: url('../images/paper-removebg-preview.png');
+    background-size: cover;
+}
+
+.scissors-choice {
+    background-image: url('../images/scissors-removebg-preview.png');
+    background-size: cover;
 }
