display none at one place

--- a/Tutorial10_stone_paper_scissors/src/style.css
+++ b/Tutorial10_stone_paper_scissors/src/style.css
@@ -112,10 +112,15 @@
 }
 
 .user-choice img {
+    display: none;
     object-fit: cover;
 }
 
 .choice {
     display: flex;
     justify-content: space-around;
+}
+
+.display-block {
+    display: block;
 }
