--- a/Tutorial10_stone_paper_scissors/src/style.css
+++ b/Tutorial10_stone_paper_scissors/src/style.css
@@ -19,8 +19,20 @@
 }
 
 .user-choice-con {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 30%;
     width: 20%;
+}
+
+.user-choice {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
